# finsternis_telegram_bot

discord_self_bot/: CMakeLists.txt  Dockerfile  config.yaml  main.cpp
discord_self_bot/headers/: config.hpp  logger.hpp
telegram_sender/: CMakeLists.txt  config.yaml  main.cpp
telegram_sender/headers/: config.hpp  gemini.hpp  logger.hpp  rabbit_consumer.hpp  telegram_bot.hpp
